Fixing overflow on events grid again, adjusting min-height for page-banner container to address issue #11

--- a/_assets/styles/components/_events-grid.scss
+++ b/_assets/styles/components/_events-grid.scss
@@ -1,6 +1,7 @@
 // Events Grid
 .events-grid-container {
-  overflow: hidden;
+  padding-top: 3px;
+  overflow-x: hidden;
   position: relative;
   &::before,
   &::after {
